Fixing bug 372098. HTML links with target="" should use the base target. r=Olli.Pettay@gmail.com, sr=jonas@sicking.cc