testing/mochitest/tests/SimpleTest/EventUtils.js
@@ -1,10 +1,55 @@
 /**
  * EventUtils provides some utility methods for creating and sending DOM events.
  * Current methods:
+ *  sendMouseEvent
  *  sendChar
  *  sendString
  *  sendKey
  */
+
+/**
+ * Send a mouse event to the node with id aTarget. The "event" passed in to
+ * aEvent is just a JavaScript object with the properties set that the real
+ * mouse event object should have. This includes the type of the mouse event.
+ * E.g. to send an click event to the node with id 'node' you might do this:
+ *
+ * sendMouseEvent({type:'click'}, 'node');
+ */
+function sendMouseEvent(aEvent, aTarget) {
+  if (['click', 'mousedown', 'mouseup', 'mouseover', 'mouseout'].indexOf(aEvent.type) == -1) {
+    throw new Error("sendMouseEvent doesn't know about event type '"+aEvent.type+"'");
+  }
+
+  // For events to trigger the UA's default actions they need to be "trusted"
+  netscape.security.PrivilegeManager.enablePrivilege('UniversalBrowserWrite');
+
+  var event = document.createEvent('MouseEvent');
+
+  var typeArg          = aEvent.type;
+  var canBubbleArg     = true;
+  var cancelableArg    = true;
+  var viewArg          = window;
+  var detailArg        = aEvent.detail        || (aEvent.type == 'click'     ||
+                                                  aEvent.type == 'mousedown' ||
+                                                  aEvent.type == 'mouseup' ? 1 : 0);
+  var screenXArg       = aEvent.screenX       || 0;
+  var screenYArg       = aEvent.screenY       || 0;
+  var clientXArg       = aEvent.clientX       || 0;
+  var clientYArg       = aEvent.clientY       || 0;
+  var ctrlKeyArg       = aEvent.ctrlKey       || false;
+  var altKeyArg        = aEvent.altKey        || false;
+  var shiftKeyArg      = aEvent.shiftKey      || false;
+  var metaKeyArg       = aEvent.metaKey       || false;
+  var buttonArg        = aEvent.button        || 0;
+  var relatedTargetArg = aEvent.relatedTarget || null;
+
+  event.initMouseEvent(typeArg, canBubbleArg, cancelableArg, viewArg, detailArg,
+                       screenXArg, screenYArg, clientXArg, clientYArg,
+                       ctrlKeyArg, altKeyArg, shiftKeyArg, metaKeyArg,
+                       buttonArg, relatedTargetArg);
+
+  document.getElementById(aTarget).dispatchEvent(event);
+}
 
 /**
  * Send the char aChar to the node with id aTarget.  If aTarget is not
